# habits

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.claude/: plan.md
.genius/: state.json
.genius/memory/: BRIEFING.md  decisions.json  progress.json
programs/habits_escrow/: Cargo.toml
programs/habits_escrow/src/: lib.rs
public/: manifest.json
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/admin/: page.tsx
src/app/bets/: page.tsx
src/app/dashboard/: page.tsx
src/app/habits/: page.tsx
src/app/leaderboard/: page.tsx
src/components/bets/: BetCard.tsx  BetForm.tsx  index.ts
src/components/dashboard/: ActivityFeed.tsx  PointsTeaser.tsx  QuickActions.tsx  StatsCard.tsx  index.ts
src/components/habits/: ActionButton.tsx  HabitCard.tsx  HabitForm.tsx  StreakBadge.tsx  index.ts
src/components/landing/: CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  TokenTeaser.tsx  index.ts
src/components/layout/: BottomNav.tsx  Header.tsx  MobileLayout.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  tabs.tsx  toast.tsx
src/components/wallet/: ConnectButton.tsx  WalletProvider.tsx  index.ts
src/i18n/: request.ts
src/lib/: utils.ts
src/lib/hooks/: useAuth.ts  useBets.ts  useDashboard.ts  useHabits.ts  useLogging.ts
src/messages/: en.json
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_secure_rls_policies.sql
tests/: habits_escrow.ts
(+26 files in other folders)
