[package]
name = "habits_escrow"
version = "0.1.0"
description = "Habits betting escrow smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "habits_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
